Fix spacing bug with navbar and reenable cdn for sanity

--- a/web/styles/Navbar.module.css
+++ b/web/styles/Navbar.module.css
@@ -24,6 +24,11 @@
 .right a {
   padding-right: 20px;
 }
+
+.right a:last-child {
+  padding-right: 0px;
+}
+
 .container a {
   display: flex;
   align-items: center;
